samples/_failures_safe/1761480996_4069bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7bad053.c: In function ‘kruskal_mst’:
./samples/SAFE/__tmp_c7bad053.c:161:46: error: expected ‘)’ at end of input
  161 |     while (edges_used < graph->node_count - 1
      |           ~                                  ^
      |                                              )
./samples/SAFE/__tmp_c7bad053.c:161:5: error: expected declaration or statement at end of input
  161 |     while (edges_used < graph->node_count - 1
      |     ^~~~~
